// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/Checkbox Compact 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <input
      className="fd-checkbox fd-checkbox--compact"
      id="fd-mocked-short-id"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="fd-form-label fd-checkbox__label"
      htmlFor="fd-mocked-short-id"
    >
      Text Option
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/Checkbox Dev 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
    disabled={false}
  >
    <input
      className="fd-checkbox"
      disabled={false}
      id="fd-mocked-short-id"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="fd-form-label fd-checkbox__label"
      htmlFor="fd-mocked-short-id"
    >
      Text Option
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/Checkbox Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
    disabled={true}
  >
    <input
      className="fd-checkbox"
      disabled={true}
      id="fd-mocked-short-id"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="fd-form-label is-disabled fd-checkbox__label"
      htmlFor="fd-mocked-short-id"
    >
      Text Option
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/Checkbox Indeterminate 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <input
      className="fd-checkbox"
      id="fd-mocked-short-id"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="fd-form-label fd-checkbox__label"
      htmlFor="fd-mocked-short-id"
    >
      Text Option
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/Checkbox Primary 1`] = `
<div
  dir="ltr"
>
  <div
    className="fd-form-item"
  >
    <input
      className="fd-checkbox"
      id="fd-mocked-short-id"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="fd-form-label fd-checkbox__label"
      htmlFor="fd-mocked-short-id"
    >
      Default Checkbox
    </label>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/Checkbox Validation State 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      className="fd-form-item"
    >
      <input
        className="fd-checkbox is-error"
        id="fd-mocked-short-id"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fd-form-label fd-checkbox__label"
        htmlFor="fd-mocked-short-id"
      >
        Text Option
      </label>
    </div>
    <div
      className="fd-form-item"
    >
      <input
        className="fd-checkbox is-warning"
        id="fd-mocked-short-id"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fd-form-label fd-checkbox__label"
        htmlFor="fd-mocked-short-id"
      >
        Text Option
      </label>
    </div>
    <div
      className="fd-form-item"
    >
      <input
        className="fd-checkbox is-success"
        id="fd-mocked-short-id"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fd-form-label fd-checkbox__label"
        htmlFor="fd-mocked-short-id"
      >
        Text Option
      </label>
    </div>
    <div
      className="fd-form-item"
    >
      <input
        className="fd-checkbox is-information"
        id="fd-mocked-short-id"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="fd-form-label fd-checkbox__label"
        htmlFor="fd-mocked-short-id"
      >
        Text Option
      </label>
    </div>
  </div>
</div>
`;
